--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <title>eFIR</title>
     </head>
     <body>
-        <header class="p-3 border-bottom bg-color">
+        <header class="p-3 border-bottom bg-color marg">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
@@ -15,15 +15,15 @@
                 </a>
         
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 nav-txt">
-                  <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Inventory</a></li>
-                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Customers</a></li>
-                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Products</a></li>
+                  <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Branch</a></li>
+                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Found</a></li>
+                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Contact Us</a></li>
                 </ul>
         
                 <div class="dropdown text-end">
                   <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    <img src="./assets/images/icons8-police-96.png" alt="mdo" width="32" height="32" class="rounded-circle">
                   </a>
                   <ul class="dropdown-menu text-small">
                     <li><a class="dropdown-item" href="#">New project...</a></li>
