--- a/complaintform.html
+++ b/complaintform.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="headline" id="headline">
-    <a href="#"><i class="fa-solid fa-house"></i></a>
+    <a href="home.html"><i class="fa-solid fa-house"></i></a>
     <h2 style="font-size: 100%; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;">Complainant Report of Article/Document Lost</h2>
   </div>
   <form action="/action_page.php" method="post">
