--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
                 </a>
         
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 nav-txt">
-                  <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+                  <li><a href="home.html" class="nav-link px-2 link-secondary">Home</a></li>
                   <li><a href="#" class="nav-link px-2 link-body-emphasis">Branch</a></li>
                   <li><a href="#" class="nav-link px-2 link-body-emphasis">Found</a></li>
-                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Contact Us</a></li>
+                  <li><a href="contactus.html" class="nav-link px-2 link-body-emphasis">Contact Us</a></li>
                 </ul>
         
                 <div class="dropdown text-end">
@@ -30,7 +30,7 @@
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="index.html">Sign out</a></li>
                   </ul>
                 </div>
               </div>
@@ -46,8 +46,8 @@
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3"><span class="text-col">Online FIR Registration System</span></h1>
                 <p class="lead">File a compaint or a FIR ( First Information Report ) online using eFIR and connect with Nepal Police</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">FIR</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Complaint</button>
+                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2" onclick="window.location.href = 'fir_form.html'"> FIR </button>
+                  <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.location.href = 'complaintform.html' "> Complaint</button>
                 </div>
               </div>
             </div>
