--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                                 Remember me
                             </label>
                         </div>
-                        <button class="btn btn-primary w-100 py-2 btn-size" type="submit">Log In</button>
-                        <p class="mt-3 mb-3 text-body-secondary mt-5">Don't have an account? <a href="#">Register</a></p>
+                        <button class="btn btn-primary w-100 py-2 btn-size" type="submit" onclick="window.location.href = 'home.html'">Log In</button>
+                        <p class="mt-3 mb-3 text-body-secondary mt-5">Don't have an account? <a href="regsiter.html">Register</a></p>
                         
                     </form>
                 </div>
